--- a/acril.html
+++ b/acril.html
@@ -9,6 +9,7 @@
     <h1>Акриловые ванны</h1>
     <p style="font-size:18px" >Отличаются хорошим внешним видом и низкой стоимостью.
           Их хотят купить те, кто начал заниматься ремонтом санузла или только приобрел новостройку.
+            Перед покупкой стоит рассмотреть их сильные и слабые стороны.
     </p>
     <ul><h2>Достоинства: </h2>
         <li><b>Разнообразие форм.</b> Можно подобрать под любой дизайн.</li>
